--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --allow-all --watch ./src/test.ts",
-    "generate": "deno run --allow-read --allow-write --allow-net --allow-env ./src/task/getByWiki.ts",
-    "update": "deno run --allow-read --allow-write --allow-net --allow-env ./src/task/update.ts"
+    "start": "deno run --allow-read --allow-write --allow-net --allow-env main.ts"
   },
   "imports": {
     "@deno-library/crc32": "jsr:@deno-library/crc32@^1.0.2",
